--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_install:
   # The next couple lines fix a crash with multiprocessing on Travis and are not specific to using Miniconda
   - sudo rm -rf /dev/shm
   - sudo ln -s /run/shm /dev/shm
+  # BLAS/ATLAS libraries
+  - sudo apt-get install liblapack3 libblas3
 # Install packages
 install:
   #- wget https://github.com/khrapovs/mygmm/archive/master.zip -P ~
