--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
   - sudo rm -rf /dev/shm
   - sudo ln -s /run/shm /dev/shm
   # BLAS/ATLAS libraries
-  - sudo apt-get install libopenblas-base
+  - sudo apt-get install liblapack3gf libblas3gf liblapack-dev libblas-dev
 # Install packages
 install:
   #- wget https://github.com/khrapovs/mygmm/archive/master.zip -P ~
