Install statsmodels on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   #- wget https://github.com/khrapovs/mygmm/archive/master.zip -P ~
   #- unzip ~/master.zip -d ~/
   #- export PYTHONPATH=$PYTHONPATH:~/mygmm-master/
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib nose seaborn
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib nose seaborn statsmodels
   - conda install --yes -c https://conda.binstar.org/omnia numdifftools
 
 # Run test
